@@ -82,6 +82,7 @@
 	* Changed tx_solr_indexqueue_Indexer::getAdditionalDocuments() to check whether the additionatl indexer returns additional documents
 	* Fixed multivalue field output using the MULTIVALUE view helper, credits Dmitri Ebert
 	* Fixed issue #33298: Facet option gets removed, if it has value 0
+	* Fixed issue #30559: Results don't listen to page browser when resultsPerPage is in URL, credits Jigal van Hemert
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
